--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,3 +1,66 @@
-<div class="container">
-    <h1>about</h1>
+<div class="fixed-top"> 
+    <ul class="nav nav-pills justify-content-center">
+    <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="/">index</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/work">work</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="/about">about</a>
+    </li>
+    </ul>
 </div>
+
+<div class="text-center floodAbout">
+    <div class="myName position-fixed top-50 start-50 translate-middle">
+        {{!-- <h1>Joe Giampaoli</h1>  --}}
+    </div>
+</div>
+<div class="container pb-5">
+
+    
+    <div class="row my-5  justify-content-center pt-5">
+        <div class=" col-lg-8 blurb text-center">
+            <h3> 
+                After 4+ years of designing and marketing in the fintech and CPG industries, 
+                I completed the Full-Stack Development 
+                Course with UCLA Extension. I'm meticulous and organized in my process — 
+                I focus on making my web experiences accessible and engaging to all. </h3>
+        </div>
+    </div>
+    <div class="row pb-5">
+        <ul class="list-inline text-center">
+            <li class="list-inline-item py-1"><a target="_blank" href="https://docs.google.com/document/d/1FZT1ssLLDjNwcnOcODVysSaFHL2pp1-BPwaCaKAtMDo/edit#heading=h.ymi089liagec"><button type="button" class="btn btn-outline-dark">📄 CV</button></a></li>
+        </ul>
+    </div>
+
+    <div class="row pb-5">
+        <ul class="list-inline text-center">
+            <li class="list-inline-item py-1"><a target="_blank" href="https://github.com/joe-zu"><button type="button" class="btn btn-outline-dark">Github</button></a></li>
+            <li class="list-inline-item py-1"><a target="_blank" href="https://www.linkedin.com/in/joegiampaoli/"><button type="button" class="btn btn-outline-dark">LinkedIn</button></a></li>
+            <li class="list-inline-item py-1"><a target="_blank" href="https://dribbble.com/Joezu"><button type="button" class="btn btn-outline-dark">Dribbble</button></a></li>
+            <li class="list-inline-item py-1"><a target="_blank" href="https://www.instagram.com/joe.zu/"><button type="button" class="btn btn-outline-dark">Instagram</button></a></li>
+        </ul>
+    </div>
+</div>
+<footer class="footer">
+        <div class="container pt-5">
+            <div class="row pt-5">     
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">Copyright Joseph Giampaoli 2021 ©</li>
+                </ul>
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">index</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">work</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">about</a></li>
+                </ul>
+                <ul class="list-inline text-center">
+                     <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">github</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">LinkedIn</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">Dribbble</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">Instagram</a></li>
+                </ul>
+            </div>
+        </div>
+</footer>
