--- a/views/partials/thumbs/thumbs.handlebars
+++ b/views/partials/thumbs/thumbs.handlebars
@@ -1,10 +1,10 @@
-<div class="row my-5">
-    <div class="col-sm">
+<div class="row my-4">
+    <div class="col-md my-2">
        <a href="/work/{{id}}"><img class="thumbnailImg" src="/assets/img/{{gif}}" alt="gif of {{title}}"></a>
     </div>
-<div class="card col-sm">
+<div class="card col-md my-2 ">
   <div class="card-body">
-    <h5 class="card-title">{{title}}</h5>
+    <h4 class="card-title">{{title}}</h4>
     <p class="card-text">{{caption}}</p>
         <ul class="list-inline">
             {{#each tech}}
