--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -12,7 +12,7 @@
   </li>
 </ul>
 
-<div class="container mt-5 py-4">
+<div class="container mt-5 py-5">
 
     {{#each project}}
         <div class="row mt-5 text-center">
@@ -50,22 +50,23 @@
 
 {{!-- /container --}}
 </div> 
-
 <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <ul>
-                        <li>Copyright Joseph Giampaoli 2020 (c)</li>
-                    </ul>
-                </div>
-                <div class="col-6">
-                    <ul>
-                        <li><span><a href=" ">work</a></span></li>
-                        <li><span><a href=" ">about</a></span></li>
-                    </ul>
-                </div>
-
+        <div class="container pt-5">
+            <div class="row pt-5">     
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">Copyright Joseph Giampaoli 2021 ©</li>
+                </ul>
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">index</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">work</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">about</a></li>
+                </ul>
+                <ul class="list-inline text-center">
+                     <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">github</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">LinkedIn</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">Dribbble</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">Instagram</a></li>
+                </ul>
             </div>
         </div>
 </footer>
