--- a/views/work.handlebars
+++ b/views/work.handlebars
@@ -1,24 +1,26 @@
 
-
-<ul class="nav nav-pills justify-content-center fixed-top">
-  <li class="nav-item">
-    <a class="nav-link" aria-current="page" href="/">index</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" href="/work">work</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/about">about</a>
-  </li>
-</ul>
-
+<div class="fixed-top"> 
+    <ul class="nav nav-pills justify-content-center">
+    <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="/">index</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="/work">work</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/about">about</a>
+    </li>
+    </ul>
+</div>
+<div class="bg-color-1">
 <div class="container py-4">
 
     
-    <div class="row my-5">
-            <h4>work</h4>
+    <div class="row mt-5 pt-5 text-center">
+            <h2>Web</h2>
+            <p></p>
     </div>
-    <div class="row my-5">
+    <div class="row my-5 pb-5 justify-content-center">
             {{!-- {{work}} --}}
             {{#each projects}}
                     {{> thumbs/thumbs}}
@@ -29,22 +31,25 @@
 
 {{!-- /container --}}
 </div> 
+</div>
 
 <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <ul>
-                        <li>Copyright Joseph Giampaoli 2020 (c)</li>
-                    </ul>
-                </div>
-                <div class="col-6">
-                    <ul>
-                        <li><span><a href=" ">work</a></span></li>
-                        <li><span><a href=" ">about</a></span></li>
-                    </ul>
-                </div>
-
+        <div class="container pt-5">
+            <div class="row pt-5">     
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">Copyright Joseph Giampaoli 2021 ©</li>
+                </ul>
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">index</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">work</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">about</a></li>
+                </ul>
+                <ul class="list-inline text-center">
+                     <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">github</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">LinkedIn</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">Dribbble</a></li>
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/joe-zu">Instagram</a></li>
+                </ul>
             </div>
         </div>
 </footer>
