--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -17,6 +17,9 @@
         {{!-- <h1>Joe Giampaoli</h1>  --}}
     </div>
 </div>
+<div class="floodBottom">
+    <img src="/assets/img/tab.svg">
+</div>
 <div class="container pb-5">
 
     
