--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,9 @@
         <h1>Joe Giampaoli</h1> 
     </div>
 </div>
-
+<div class="floodBottom">
+    <img src="/assets/img/tab.svg">
+</div>
 
 
 
