--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -26,10 +26,10 @@
     <div class="row my-5  justify-content-center pt-5">
         <div class=" col-lg-8 blurb text-center">
             <h3> 
-                After 4+ years of designing and marketing in the fintech and CPG industries, 
-                I completed the Full-Stack Development 
-                Course with UCLA Extension. I'm meticulous and organized in my process — 
-                I focus on making my web experiences accessible and engaging to all. </h3>
+                I completed the Full-Stack Development Course with UCLA Extension to add 
+                front-end & back-end web development to my 4+ years of designing and branding 
+                in fintech and CPG. I'm meticulous and organized in my process — 
+                I focus on creating web experiences that are accessible and engaging for all. </h3>
         </div>
     </div>
     <div class="row pb-5">
