--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,8 +29,8 @@
     
     <div class="row my-5 text-center pt-5">
         <div class=" col-sm blurb">
-            <h2>I'm a graphic designer and web developer,</h2>
-            <p>in Los Angeles CA.</p>
+            <h2>I'm a graphic designer and web developer</h2>
+            <p>in Los Angeles, CA.</p>
         </div>
     </div>
 
