--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -34,7 +34,7 @@
     </div>
     <div class="row pb-5">
         <ul class="list-inline text-center">
-            <li class="list-inline-item py-1"><a target="_blank" href="https://docs.google.com/document/d/1FZT1ssLLDjNwcnOcODVysSaFHL2pp1-BPwaCaKAtMDo/edit#heading=h.ymi089liagec"><button type="button" class="btn btn-outline-dark">📄 CV</button></a></li>
+            <li class="list-inline-item py-1"><a target="_blank" href="https://drive.google.com/file/d/11036yysWFl0-5Mjv79lWA8FJxQoybWkg/view?usp=sharing"><button type="button" class="btn btn-outline-dark">📄 CV</button></a></li>
         </ul>
     </div>
 
