new email and resume link

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,8 +36,9 @@
 
     <div class="row pb-5">
         <ul class="list-inline text-center">
-            <li class="list-inline-item py-1"><a target="_blank" href="https://github.com/joe-zu"><button type="button" class="btn btn-outline-dark">Github</button></a></li>
             <li class="list-inline-item py-1"><a target="_blank" href="https://www.linkedin.com/in/joegiampaoli/"><button type="button" class="btn btn-outline-dark">LinkedIn</button></a></li>
+            <li class="list-inline-item py-1"><a target="_blank" href="mailto:giampaoli.joe@gmail.com"><button type="button" class="btn btn-outline-dark">Email</button></a></li>
+            <li class="list-inline-item py-1"><a target="_blank" href="https://github.com/joe-zu"><button type="button" class="btn btn-outline-dark">Github</button></a></li>  
             <li class="list-inline-item py-1"><a target="_blank" href="https://dribbble.com/Joezu"><button type="button" class="btn btn-outline-dark">Dribbble</button></a></li>
             <li class="list-inline-item py-1"><a target="_blank" href="https://www.instagram.com/joe.zu/"><button type="button" class="btn btn-outline-dark">Instagram</button></a></li>
         </ul>
