--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,14 +42,14 @@ body {
 .floodAbout {
     /* background-image: linear-gradient(-45deg, #FFC796 0%, #FF6B95 100%); */
     background-image: url(/assets/img/aboutJG.png);
-    object-fit: contain;
+    /* object-fit: cover; */
     height: 100vh;
     width: 100%;
     /* margin-top: -3.5rem; */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    /* background-size: cover; */
+    background-size: cover;
     z-index: 1;
 }
 .floodBottom {
