--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -14,7 +14,7 @@
 
 <div class="text-center floodAbout">
     <div class="myName position-fixed top-50 start-50 translate-middle">
-        {{!-- <h1>Joe Giampaoli</h1>  --}}
+       <h1 class="aboutMe">About me</h1>
     </div>
 </div>
 <div class="floodBottom">
